[project]
name = "moltbook-crawler"
version = "0.2.0"
description = "Async crawler for moltbook.com with proxy-hunter integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "tqdm>=4.67.3",
    "proxy-hunter",
]

[tool.uv.sources]
proxy-hunter = { path = "../proxy-hunter", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawlers"]